# competitive-programming

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.C485871D88B4AB92.idx
DataStructures/: BinaryIndexedTree.hpp  DSU.hpp  MonotonicQueue.hpp  MonotonicStack.hpp  SparseTable.hpp  multiset.hpp
algorithms/: binary.hpp  dijkstra.hpp  math.hpp  prim.hpp
problems/AtCoder/AtCoder Beginner Contest 169/: D - Div Game  D - Div Game.cpp
problems/AtCoder/AtCoder Beginner Contest 187/: F - Close Group  F - Close Group.cpp  F - Close Group_input3.txt
problems/AtCoder/Educational DP Contest/: A - Frog 1  A - Frog 1.cpp  B - Frog 2  B - Frog 2.cpp  C - Vacation  C - Vacation.cpp  O - Matching  O - Matching.cpp  U - Grouping  U - Grouping.cpp
problems/AtCoder/SuntoryProgrammingContest2023（AtCoder Beginner Contest 321）/: F - #(subset sum = K) with Add and Erase  F - #(subset sum = K) with Add and Erase.cpp
problems/CSES/CSES Problem Set/: Coin Combinations I  Coin Combinations I.cpp  Dice Combinations  Dice Combinations.cpp  Dice Combinations_output1.txt  Distinct Values Queries  Distinct Values Queries.cpp  Dynamic Range Sum Queries  Dynamic Range Sum Queries.cpp  Elevator Rides  Elevator Rides.cpp  Elevator Rides_recursive solution.cpp  Money Sums  Money Sums.cpp  Range Updates and Sums  Range Updates and Sums.cpp  Range Updates and Sums_output1.txt  Two Sets II  Two Sets II.cpp
problems/CodeChef/MAY13/: Matchsticks  Matchsticks.cpp  Matchsticks_input0.txt  (+1 more)
problems/LeetCode/: Avoid Anagrams.cpp
problems/oj/: 2024 - Bank.cpp
templates/: init.cpp
(+95 files in other folders)
